@@ -3,3 +3,30 @@ a = 0 b=1
 a = 1 b=0
 a = 1 b=1
 a = 1 b=0
+string:
+  0 : 1
+  1 : 2
+  2 : 3
+  3 : 0
+lstring:
+  0 : 5
+  1 : A
+  2 : B
+  3 : 0
+  4 : C
+  5 : D
+bytes:
+  0 : A0
+  1 : A1
+  2 : DD
+  3 : CC
+  4 : 0
+  5 : 0
+  6 : FF
+  7 : EE
+  8 : AF
+words:
+  0 : A0
+  1 : 0
+  2 : A1
+  3 : 0
