@@ -1,0 +1,15 @@
+obj
+  f: "spin/ers_fmt.spin2"
+  
+pub main()
+  send := @_txraw
+  showbytes(@"string", string(1, 2, 3), 4)
+  showbytes(@"lstring", lstring(10, 11, 0, 12, 13), 6)
+  showbytes(@"bytes", bytes($a0, $a1, long $ccdd, word $eeff, $af), 9)
+  showbytes(@"words", words($a0, $a1), 4)
+  
+pub showbytes(msg, bytes, n) | i, data
+  data := bytes
+  send(f.str(msg), ":", 13, 10)
+  repeat n with i
+    send( "  ", f.hex(i), " : ", f.hex(byte[data+i]), 13, 10)
