@@ -170,6 +170,16 @@ Symbol                   | When Defined
 
 ### Special Preprocessor Comments
 
+#### Spin2 version
+
+If the first line of a file is a comment like `{$ver NN}` then the file is processed using the rules from Spin2 language version `NN`, at least as far as any reserved keywords are concerned. Thus, for example, to make sure the new version 43 keywords like `bytes` do not conflict with any of your code, you could put `{$ver 42}` at the top of the file to disable keywords from PNut versions later than 42.
+
+Note that flexspin does have some (slightly hacky) ways to try to avoid conflicts between keywords and variables, and these will be used if no version appears, or if `{$ver 0}` is given.
+
+To get warnings about potential conflicts between language keywords and your variables, use `-Wlanguage-version` (included in `-Wall`).
+
+#### Flexspin only code
+
 If the preprocessor sees the special comment `{$flexspin` at the beginning of a line, it will re-process the rest of the comment as input. This allows flexspin specific code to be placed in such comments. For example, you could do:
 ```
 CON
